# capstone

./: .dockerignore  .gitignore  LICENSE  Makefile  Readme.md  docker-compose-prod.yml  docker-compose.yml  example.env  go.mod  go.sum
api/: Dockerfile  go.mod  main.go
api/config/: development.go  index.go  production.go
api/controllers/: application.go  application_test.go  conversation.go  conversation_test.go  message.go  user.go  user_test.go
api/docs/: docs.go  swagger.json  swagger.yaml
api/middlewares/: admin.go  authentication.go
api/models/: application.go  conversation.go  message.go  service.go  service_test.go  user.go  user_test.go
api/plugins/: websockets.go
api/public/: main.css
api/routes/: application.go  conversation.go  index.go  message.go  user.go  websocket.go
api/security/: hash.go  hash_test.go  verifyjwt.go
api/service/: rabbit.go  rabbit_test.go
api/stuff/: index.go
api/templates/: index.html  websocket.html
api/utils/: convertstringtoint_test.go  matchregex_test.go  randomstring_test.go  (+1 more)
deploy/: api-deployment.yaml  api-service.yaml  mailer-deployment.yaml  push-deployment.yaml  rabbit-deployment.yaml  rabbit-service.yaml  sms-deployment.yaml  upload-deployment.yaml
exportservice/: Cargo.toml
exportservice/src/: file.rs  main.rs
mailservice/: Dockerfile  main.go  main_test.go  templates.go
pushservice/: Dockerfile  deployment.yml  go.mod  main.go  main_test.go  service.yml
smsservice/: Dockerfile  go.mod  main.go  main_test.go
uploadservice/: Dockerfile  go.mod  helper.go  main.go  main_test.go
(+13 files in other folders)
