[package]
name = "exportservice"
version = "0.1.0"
authors = ["paingha joe alagoa <apaingha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
amiquip = { version = "0.3", default-features = false }